# biofaster

./: .gitignore  .gitmodules  Cargo.toml  README.md  analyze_benchmark_results.ipynb  biofaster_slurm.sh  build.sh  generate_static_input.sh  pyproject.toml  run_all_benchmarks.sh  slurm.err  slurm.out
.github/workflows/: publish-results.yml
plots/: 0.0001m_hot_bgz.md  0.0001m_hot_gz.md  0.0001m_hot_raw.md  0.01m_cold_bgz.md  0.01m_cold_gz.md  0.01m_cold_raw.md  0.01m_hot_bgz.md  0.01m_hot_gz.md  0.01m_hot_raw.md  0.01m_really_cold_bgz.md  0.01m_really_cold_gz.md  0.01m_really_cold_raw.md  0.1m_cold_bgz.md  0.1m_cold_gz.md  0.1m_cold_raw.md  0.1m_hot_bgz.md  0.1m_hot_gz.md  0.1m_hot_raw.md  0.1m_really_cold_bgz.md  0.1m_really_cold_gz.md  0.1m_really_cold_raw.md  0.5m_cold_bgz.md  0.5m_cold_gz.md  0.5m_cold_raw.md  0.5m_hot_bgz.md  0.5m_hot_gz.md  0.5m_hot_raw.md  100m_cold_bgz.md  100m_cold_gz.md  100m_cold_raw.md  100m_hot_bgz.md  100m_hot_gz.md  100m_hot_raw.md  10m_cold_bgz.md  10m_cold_gz.md  10m_cold_raw.md  10m_hot_bgz.md  10m_hot_gz.md  10m_hot_raw.md  10m_really_cold_bgz.md  (+62 more)
src/: biopython_antonio.py  fqcnt_nt.rs  fqcnt_py9x_needletail.py  paraseq_filt_py.py  polars_bio_count.py
src/biofaster/: funcitons.py  (+1 more)
tools/: README.md  biofast-py1-4l.sh  biofast-py2-rfq.sh  biofast-py3-mappy.sh  biofast-py4-bpitr.sh  biofast-py5-bp.sh  biofast-py6-pyfx.sh  biofast-py7-pysam.sh  fastqscan.sh  fastqscanMT2c.sh  needletail-python.sh  needletail-rust.sh  paraseq-filt.sh  paraseq-filtMT2.sh  paraseq-filtMT6.sh  paraseq-filt_py.sh  paraseq-filt_pyMT2c.sh
(+2 files in other folders)
