[project]
name = "fastq-parser-benchmark"
version = "0.1.0"
authors = [{ name = "FASTQ Parser Benchmark Contributors" }]
description = "FASTQ parser benchmark comparing BBTools, fastqscan, and needletail"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyfastx>=2.2.0,<3",
    "pysam>=0.23.3,<0.24",
    "bio>=1.8.1,<2",
    "mappy>=2.30,<3",
    "pyfaidx>=0.9.0.3,<0.10",
    "polars-bio>=0.19.0,<0.20",
]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
needletail = ">=0.7.0,<0.8"
polars = ">=1.29.0,<2"
matplotlib = ">=3.5.0"

[tool.pixi.dependencies]
python = ">=3.9,<3.13"
jupyter = ">=1.1.1,<2"
ipykernel = ">=7.1.0,<8"
hyperfine = ">=1.20.0,<2"
pigz = ">=2.8,<3"
biopython = ">=1.86,<2"
pyfastx = ">=2.2.0,<3"
pysam = ">=0.23.3,<0.24"
htslib = ">=1.22.1,<2"
altair = ">=6.0.0,<7"
uv = ">=0.9.17,<0.10"
vmtouch = ">=1.3.1,<2"

[tool.pixi.tasks]
benchmark = "bash -c 'bash run_all_benchmarks.sh --warmup 0 -r 1 --sizes \"0.01m,0.1m,1m,10m\" 2>&1 | tee benchmark_run_$(date +%Y%m%d_%H%M%S).log'" # when not debugging: 10m,100m too
build = "bash build.sh"
generate-static-files = "bash generate_static_input.sh"
notebook = "jupyter notebook analyze_benchmark_results.ipynb"
generate-index = "python src/biofaster/generate_index.py"
